--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 src/main/resources/application-dev.properties
+src/main/resources/in-stock-tracker-59cba-firebase-adminsdk-x73c4-ed73e36fe1.json
 
 ### STS ###
 .apt_generated
